[project]
name = "klinter_nodes"
description = "Concat_strings atm - celebrating first_node"
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/klinter007/klinter_nodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "klinter_nodes"
Icon = ""
